--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextplate",
   "version": "2.0.0",
   "description": "Nextjs and Tailwindcss boilerplate",
-  "author": "zeon.studio",
+  "author": "Casiano",
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
   "scripts": {
